--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "dist"
   ],
   "dependencies": {
+    "@lambdacurry/medusa-plugin-product-reviews": "^0.0.20",
     "@medusajs/medusa-js": "^6.1.8"
   },
   "devDependencies": {
